force-app/main/default/objects/TrackIT__Work_Order_Location__c/TrackIT__Work_Order_Location__c.object-meta.xml
<CustomObject>
    <label>Location On Work Order</label>
    <nameField>
        <label>Problem Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Location On Work Order</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>