force-app/main/default/objects/TrackIT__Work_Order_Location__c/fields/TrackIT__Completed__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>