force-app/main/default/objects/TrackIT__Work_Order_Location__c/fields/TrackIT__Location__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location</label>
    <referenceTo>TrackIT__Location__c</referenceTo>
    <relationshipName>Work_Order_Locations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>