force-app/main/default/objects/TrackIT__Work_Order_Location__c/fields/TrackIT__Location_Desc__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Location_Desc__c</fullName>
    <label>Location Desc</label>
    <type>TextArea</type>
</CustomField>