force-app/main/default/objects/TrackIT__Work_Order_Location__c/fields/TrackIT__WO_Location_ID__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__WO_Location_ID__c</fullName>
    <label>WO Location ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>